--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <link rel="stylesheet" href="assets/css/owl-carousel.css">
 
     <link rel="stylesheet" href="assets/css/lightbox.css">
+
+    <link rel="stylesheet" href="assets/css/custom.css">
+
 <!--
 
 TemplateMo 571 Hexashop
