--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@ https://templatemo.com/tm-571-hexashop
                 <div class="col-lg-12">
                     <div class="section-heading">
                         <h2>Social Media</h2>
-                        <span id="test">Details to details is what makes Hexashop different from the other themes.</span>
+                        <span id="test"></span>
                     </div>
                 </div>
             </div>
